--- a/.gitignore
+++ b/.gitignore
@@ -93,10 +93,10 @@ ENV/
 # OS specific and other
 .DS_Store
 docs/.DS_Store
-.keep
 
 # ignore everything in ignore/
 ignore/
 
 # SQLite databases
 database/*.db
+share/aither.conf
